Bug 147196 - CRASH: Format - Text - Cycle Case
Summary: CRASH: Format - Text - Cycle Case
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: high major
Assignee: Michael Warner
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: 148148
  Show dependency treegraph
 
Reported: 2022-02-04 14:36 UTC by Xisco Faulí
Modified: 2022-03-23 10:05 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (42.00 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2022-02-04 14:36 UTC, Xisco Faulí
Details
another file affected (8.84 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2022-02-04 14:51 UTC, Xisco Faulí
Details
bt with debug symbols (3.33 KB, text/plain)
2022-02-04 20:19 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-02-04 14:36:22 UTC
Created attachment 178066 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Select all
3. Format - Text - Cycle Case

-> Crash

Reproduced in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: d5f015185240a7bddfed7ddf10d6b5426e35fb72
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2022-02-04 14:37:24 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=de5aa409353c839483df21d47254fd2a508ab7d9

author	Michael Warner <michael.warner.ut+libreoffice@gmail.com>	2021-10-02 09:34:34 -0400
committer	Heiko Tietze <heiko.tietze@documentfoundation.org>	2022-02-01 11:16:27 +0100
commit de5aa409353c839483df21d47254fd2a508ab7d9 (patch)
tree eeb8829c7b191a6595438c1c64407b347a54d239
parent bace2e0a80b939f7b1c666cf669ae99bc8758f05 (diff)
tdf#144851 Honor Selection When Applying Title Case Format
 
Bisected with: bibisect-linux64-7.4

Adding Cc: to Michael Warner
Comment 2 Xisco Faulí 2022-02-04 14:51:14 UTC
Created attachment 178068 [details]
another file affected
Comment 3 Xisco Faulí 2022-02-04 14:52:01 UTC
According to the results of dev-tools/uitest/mass-testing many files are affected. Bumping importance
Comment 4 Michael Warner 2022-02-04 16:37:50 UTC
I'll take a look this weekend.
Comment 5 Julien Nabet 2022-02-04 20:19:11 UTC
Created attachment 178074 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I got an assertion.

I attached main part of bt if it can help.
Comment 6 Julien Nabet 2022-02-04 20:19:47 UTC
Also here are the last logs on console:
warn:legacy.tools:62517:62517:editeng/source/editeng/impedit4.cxx:2755: invalid word length of 0
soffice.bin: /home/julien/lo/libreoffice/cppu/source/uno/sequence.cxx:745: sal_Bool uno_type_sequence_realloc(uno_Sequence **, typelib_TypeDescriptionReference *, sal_Int32, uno_AcquireFunc, uno_ReleaseFunc): Assertion `nSize >= 0 && "### new size must be at least 0!"' failed.
Comment 7 Michael Warner 2022-02-10 04:51:29 UTC
I think I have a bead on what's happening, but I need to spend more time testing my solution. Then I have to check if there's also an issue in the Writer implementation of this. Will probably be several days before I can submit a patch.
Comment 8 Michael Warner 2022-02-14 14:33:21 UTC
https://gerrit.libreoffice.org/c/core/+/129888
Comment 9 Commit Notification 2022-02-17 16:16:20 UTC
Michael Warner committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b7308bda7212da5681b7047c02e2e13e36b2a98a

tdf#147196: Fix crash in editeng when applying title case format

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Xisco Faulí 2022-03-01 15:01:17 UTC
I guess we can close this issue.
@Michael, thanks for fixing this issue!!