tdf#147196: Fix crash in editeng when applying title case format

Fixes a possiblity of crashing when applying title case format using the
edit engine.

Change-Id: I4f44f635a1c96b021c084bb5bb973180744e56e2